<resources>
    <string name="app_name">Lab3_Calculator</string>

    <string name="btn_MC">MC</string>
    <string name="btn_MR">MR</string>
    <string name="btn_MS">MS</string>
    <string name="btn_mPlus">M+</string>
    <string name="btn_mMinus">M-</string>
    <string name="btn_clearEverything">CE</string>
    <string name="btn_del">DEL</string>

    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>

    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_percent">%</string>
    <string name="btn_squareRoot">√</string>
    <string name="btn_equals">=</string>
</resources>